# streamlit-task-runner

./: .gitignore  Makefile  README.md  pyproject.toml  start-app.sh  task_runner.py
.streamlit/: config.toml
streamlit_task_runner/: __init__.py
