

[tool.poetry]
name = "Streamlit Task Runner"
version = "23.6.21"
description = "  "
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beartype = "^0.15.0"
streamlit = "^1.25.0"
watchdog = "^3.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
debugpy = "1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79



[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true